feat: add proto files for cache